# soxspipe

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGES.md  CITATION.cff  Jenkinsfile  MANIFEST.in  Makefile  README.md  conftest.py  environment.yml  nirMerate.py  nose2.cfg  profile.prof  pyproject.toml  setup.py  soxspipe.code-workspace
.github/: copilot-instructions.md
docs/: Makefile  requirements.txt  sphinx_to_overleaf.sh
htmlcov/: _Users_Dave_git_repos__packages__python_fundamentals_fundamentals___init___py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals___version___py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_commonutils___init___py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_files___init___py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_files_fileChunker_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_files_recursive_directory_listing_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_fmultiprocess_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_logs_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql___init___py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_convert_dictionary_to_mysql_table_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_database_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_directory_script_runner_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_get_database_table_column_names_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_insert_list_of_dictionaries_into_database_tables_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_readquery_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_setup_database_connection_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_sqlite2mysql_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_table_exists_py.html  _Users_Dave_git_repos__packages__python_fundamentals_fundamentals_mysql_writequery_py.html  index.html  recipes___init___py.html  setup_py.html  (+50 more)
(+580 files in other folders)
